tests/snapshots/cli__object_with_explicit_nullable_type.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "object_with_explicit_nullable_type",
  "fields": [
    {
      "name": "maybeName",
      "type": [
        "null",
        "string"
      ]
    }
  ]
}
