tests/snapshots/cli__object_with_map_of_records.diff.snap
---
source: tests/cli.rs
expression: diff
---
 {

   "type": "record",

   "name": "document",

   "namespace": "object_with_map_of_records",

   "fields": [

     {

       "name": "document",

       "type": {

         "type": "map",

         "values": {

+          "type": "record",

           "name": "document_extensions",

-          "type": "record",

           "namespace": "object_with_map_of_records",

           "fields": [

             {

               "name": "language",

               "type": "string"

             },

             {

               "name": "value",

               "type": "string"

             }

           ]

         },

         "name": "document"

       }

     }

   ]

 }
