tests/snapshots/cli__object_with_map_via_additional_props.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "object_with_map_via_additional_props",
  "fields": [
    {
      "name": "labels",
      "type": [
        "null",
        {
          "name": "labels",
          "type": "map",
          "values": "string"
        }
      ]
    }
  ]
}
