tests/snapshots/cli__object_with_oneof.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "object_with_oneof",
  "fields": [
    {
      "name": "value",
      "type": [
        "string",
        "int"
      ]
    }
  ]
}
